# verbal-studio

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: assignment.md  requirements.md  transcript.srt
scripts/: auto_assess.py  generate_feedback.py  transcribe.py
src/: main.rs
